--- a/tools/Makefile
+++ b/tools/Makefile
@@ -31,8 +31,6 @@ endif
 
 all: kaldi.done python check_install
 
-python: venv $(CUDA_DEPS) warp-ctc.done warp-transducer.done chainer_ctc.done
-
 extra: nkf.done moses.done mwerSegmenter.done pesq
 
 ifneq ($(strip $(KALDI)),)
@@ -77,43 +75,6 @@ ifneq ($(strip $(CUPY_VERSION)),)
 	. venv/bin/activate && pip install cupy==$(CUPY_VERSION)
 	touch cupy.done
 endif
-
-warp-ctc.done: espnet.done
-	if . venv/bin/activate && python -c 'import torch as t;major=t.__version__.split(".")[0];assert major == "1"' &> /dev/null; then \
-		if [ ! -z "$(strip $(CUPY_VERSION))" ]; then \
-			. venv/bin/activate && pip install warpctc-pytorch10-cuda100; \
-		else \
-			. venv/bin/activate && pip install warpctc-pytorch10-cpu; \
-		fi \
-	else \
-		rm -rf warp-ctc; \
-		git clone https://github.com/espnet/warp-ctc.git; \
-		cd warp-ctc; git checkout -b pytorch-0.4 remotes/origin/pytorch-0.4; \
-		mkdir build && cd build && cmake .. && $(MAKE) && cd ..; \
-		. ../venv/bin/activate; pip install cffi; cd pytorch_binding && python setup.py install; \
-	fi
-	touch warp-ctc.done
-
-warp-transducer.done: espnet.done
-	echo "******************************************************************************************"
-	rm -rf warp-transducer
-	git clone https://github.com/HawkAaron/warp-transducer.git
-	export CFLAGS="-I$(CUDA_HOME)/include $(CFLAGS)"
-	# Note: Requires gcc>=5.0 to build extensions with pytorch>=1.0
-	if . venv/bin/activate && python -c 'import torch as t;assert t.__version__[0] == "1"' &> /dev/null; then \
-        . venv/bin/activate && python -c "from distutils.version import LooseVersion as V;assert V('$(GCC_VERSION)') >= V('5.0'), 'Requires gcc>=5.0'"; \
-	fi
-	. venv/bin/activate; cd warp-transducer && mkdir build && cd build && cmake .. && $(MAKE); true
-	. venv/bin/activate; cd warp-transducer/pytorch_binding && python setup.py install
-	touch warp-transducer.done
-
-chainer_ctc.done: espnet.done
-	rm -rf chainer_ctc
-	git clone https://github.com/jheymann85/chainer_ctc.git
-	. venv/bin/activate; pip install cython
-	. venv/bin/activate; cd chainer_ctc && chmod +x install_warp-ctc.sh && ./install_warp-ctc.sh ; true
-	. venv/bin/activate; cd chainer_ctc && pip install .
-	touch chainer_ctc.done
 
 nkf.done:
 	rm -rf nkf
@@ -173,15 +134,13 @@ PESQ.zip:
 
 
 clean: clean_extra
-	rm -rf kaldi venv warp-ctc warp-transducer chainer_ctc
 	rm -f miniconda.sh
 	rm -rf *.done
 	find . -iname "*.pyc" -delete
 
 clean_python:
-	rm -rf venv warp-ctc warp-transducer chainer_ctc
 	rm -f miniconda.sh
-	rm -f chainer_ctc.done espnet.done pytorch_complex pytorch_complex.done
+	rm -f espnet.done pytorch_complex pytorch_complex.done
 	find . -iname "*.pyc" -delete
 
 clean_extra:
