--- a/tools/Makefile
+++ b/tools/Makefile
@@ -74,7 +74,7 @@ endif
 
 cupy.done: espnet.done
 ifneq ($(strip $(CUPY_VERSION)),)
-	. venv/bin/activate && pip install cupy-cuda100==$(CUPY_VERSION)
+	. venv/bin/activate && pip install cupy==$(CUPY_VERSION)
 	touch cupy.done
 endif
 
